--- a/about.html
+++ b/about.html
@@ -150,7 +150,7 @@
                     <div class="col-md-6 col-lg-6 col-xl-3 wow fadeInUp" data-wow-delay="0.1s">
                         <div class="team-item rounded">
                             <div class="team-img rounded-top h-100">
-                                <img src="img/team-chief.jpg" class="img-fluid rounded-top w-100" alt="Chief Technician">
+                                <img src="img/basil.jpeg" class="img-fluid rounded-top w-100" alt="Chief Technician">
                                 <div class="team-icon d-flex justify-content-center">
                                     <a class="btn btn-square btn-primary text-white rounded-circle mx-1" href="#"><i class="fab fa-facebook-f"></i></a>
                                     <a class="btn btn-square btn-primary text-white rounded-circle mx-1" href="#"><i class="fab fa-twitter"></i></a>
@@ -167,7 +167,7 @@
                     <div class="col-md-6 col-lg-6 col-xl-3 wow fadeInUp" data-wow-delay="0.3s">
                         <div class="team-item rounded">
                             <div class="team-img rounded-top h-100">
-                                <img src="img/team-junior.jpg" class="img-fluid rounded-top w-100" alt="Junior Technician">
+                                <img src="img/bibin.jpeg" class="img-fluid rounded-top w-100" alt="Junior Technician">
                                 <div class="team-icon d-flex justify-content-center">
                                     <a class="btn btn-square btn-primary text-white rounded-circle mx-1" href="#"><i class="fab fa-facebook-f"></i></a>
                                     <a class="btn btn-square btn-primary text-white rounded-circle mx-1" href="#"><i class="fab fa-twitter"></i></a>
