--- a/about.html
+++ b/about.html
@@ -111,7 +111,7 @@
                         <div class="about-img pb-5 ps-5">
                             <img src="img/home-electrical-appliances-repair.jpg" class="img-fluid rounded w-100" style="object-fit: cover;" alt="Image">
                             <div class="about-img-inner">
-                                <img src="img/home-ac-repairs-services.jpg" class="img-fluid rounded-circle w-50 h-50" alt="Image">
+                                <img src="img/home-ac-repairs-services.jpg" class="img-fluid rounded-circle w-50 " alt="Image">
                             </div>
                            
                         </div>
