--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                     <img src="img/home-appliances-repairing-service.jpg" class="img-fluid w-100" alt="Image">
                     <div class="carousel-caption">
                         <div class="carousel-caption-content p-3">
-                            <h5 class="text-white text-uppercase fw-bold mb-4" style="letter-spacing: 3px;">Physiotherapy Center</h5>
+                            <h5 class="text-white text-uppercase fw-bold mb-4" style="letter-spacing: 3px;"></h5>
                             <h1 class="display-1 text-capitalize text-white mb-4">Best Solution For Painful Life</h1>
                             <p class="mb-5 fs-5 animated slideInDown">Keeping your home running smoothly with professional care for all electronic appliances
                             </p>
